Allow specifying multiple date/time intervals to match
This applies to visits as well as video visualizations. In order to
maintain backwards compatibility, besides the current date_begin and
date_end parameters, you can now also use date_begin[] and date_end[] to
specify multiple intervals to match.
